--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,6 +24,15 @@
   	<param-value>jdbc:mariadb://127.0.0.1:3306/suamil_db</param-value>
   </context-param>
   
+    <!-- 게시판 페이지처리에 사용할 상수 -->
+  <context-param>
+  	<param-name>PAGE_SIZE</param-name>
+  	<param-value>2</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>BLOCK_PAGE</param-name>
+  	<param-value>5</param-value>
+  </context-param>
   
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
